--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-community/hooks": "^2.6.0",
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject",
+        "amplify-modelgen": "node amplify/scripts/amplify-modelgen.js",
+        "amplify-push": "node amplify/scripts/amplify-push.js"
+    },
+    "dependencies": {
+        "@aws-amplify/cli": "^4.30.0",
+        "@aws-amplify/core": "^3.7.0",
+        "@aws-amplify/datastore": "^2.6.1",
+        "@react-native-community/hooks": "^2.6.0",
+        "@react-native-community/netinfo": "5.9.6",
+        "expo": "~39.0.2",
+        "expo-status-bar": "~1.0.2",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+        "react-native-web": "~0.13.12"
+    },
+    "devDependencies": {
+        "@babel/core": "~7.9.0",
+        "ini": "^1.3.5",
+        "inquirer": "^6.5.1"
+    },
+    "private": true
 }
